[UPD] Melhorando o projeto atualizei o app.py e o swagger, agora irei usar .env para manter a minha chave secreta que sera usada internamente para assinar e verificar o token
