# static/swagger.json
@@ -6,9 +6,7 @@
     "description": "Documentação da API do laboratório de criação de APIs"
   },
   "host": "localhost:1313",
-  "schemes": [
-    "http"
-  ],
+  "schemes": ["http"],
   "paths": {
     "/": {
       "get": {
@@ -18,7 +16,13 @@
           "200": {
             "description": "Mensagem de status",
             "schema": {
-              "type": "string"
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "API is running"
+                }
+              }
             }
           }
         }
@@ -32,9 +36,14 @@
           "200": {
             "description": "Lista de itens",
             "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
+              "type": "object",
+              "properties": {
+                "items": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
               }
             }
           }
@@ -45,6 +54,27 @@
       "post": {
         "summary": "Login para gerar token JWT",
         "description": "Gera um token JWT para autenticação.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "type": "string",
+                  "example": "admin"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "password"
+                }
+              },
+              "required": ["username", "password"]
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Token de autenticação",
@@ -56,6 +86,9 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Credenciais inválidas"
           }
         }
       }
@@ -73,7 +106,13 @@
           "200": {
             "description": "Acesso permitido à rota protegida",
             "schema": {
-              "type": "string"
+              "type": "object",
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "Bem-vindo, admin! Esta é uma rota protegida."
+                }
+              }
             }
           },
           "401": {
